--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.19.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-check-box": "^2.1.7",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
