--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-swiper-flatlist": "^2.0.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.9",
     "react-redux": "^7.2.0",
