--- a/ios/umimedicalsupport/Info.plist
+++ b/ios/umimedicalsupport/Info.plist
@@ -58,6 +58,9 @@
 		<string>MaterialIcons.ttf</string>
 		<string>FontAwesome.ttf</string>
 		<string>EvilIcons.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>Entypo.ttf</string>
+
 	</array>
 	<key>CFBundleGetInfoString</key>
 	<string></string>
