--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "0.62.2",
     "react-native-calendars": "^1.265.0",
     "react-native-check-box": "^2.1.7",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
