--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -232,3 +232,8 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+project.ext.vectoricons = [
+    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf','FontAwesome.ttf','AntDesign.ttf','Entypo.ttf','Ionicons.ttf','MaterialCommunityIcons.ttf','Octicons.ttf','Zocial.ttf','SimpleLineIcons.ttf' ] // Name of the font files you want to copy
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
