--- a/ios/umimedicalsupport/Info.plist
+++ b/ios/umimedicalsupport/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -54,17 +54,10 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>UIAppFonts</key>
-	<array>
-		<string>MaterialIcons.ttf</string>
-		<string>FontAwesome.ttf</string>
-		<string>EvilIcons.ttf</string>
-		<string>Ionicons.ttf</string>
-		<string>Entypo.ttf</string>
-
-	</array>
+	<array/>
 	<key>CFBundleGetInfoString</key>
-	<string></string>
+	<string/>
 	<key>LSApplicationCategoryType</key>
-	<string></string>
+	<string/>
 </dict>
 </plist>
